--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "moment": "^2.29.3",
+    "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-calendar": "^3.7.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
-    "react-router-dom": "^5.0.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "redux": "^4.1.2",
     "web-vitals": "^2.1.4"
@@ -46,5 +49,8 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "react-query": "^3.39.0"
+  }
 }
